Updated compilation process for tensorflow 1.11 and CUDA 10 on Ubuntu 18.04

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,12 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+
+### Custom exceptions
+
+# README html file
+README.html
+
+# Tensorflow package installation files
+tensorflow*.whl
